sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  { for (i=0 to getNombreValeurs()-2) {
					if (T[i]<T[]i+1) { echange(i:Int, i+1:Int)
						
					}
}
}
